# xbmc-pvr-addons

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac  xbmc-pvr-addons.kdev4
addons/: Makefile.am  Makefile.include.am
addons/pvr.argustv/: Makefile.am
addons/pvr.argustv/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.argustv/src/: EventsThread.cpp  EventsThread.h  KeepAliveThread.cpp  activerecording.cpp  activerecording.h  argustvrpc.cpp  argustvrpc.h  channel.cpp  channel.h  client.cpp  client.h  epg.cpp  epg.h  guideprogram.cpp  guideprogram.h  pvrclient-argustv.cpp  pvrclient-argustv.h  recording.cpp  recording.h  recordinggroup.cpp  recordinggroup.h  recordingsummary.cpp  recordingsummary.h  tools.cpp  tools.h  upcomingrecording.cpp  upcomingrecording.h  uri.cpp  uri.h  utils.cpp  utils.h
addons/pvr.cmyth/: Makefile.am  boost_win32_dependency.bat
addons/pvr.cmyth/Win32/: boost_win32_dependency.bat
addons/pvr.cmyth/addon/: addon.xml  changelog.txt
addons/pvr.cmyth/src/: PVRcmyth.cpp  PVRcmyth.h  client.cpp  client.h  fileOps.cpp  fileOps.h  libcmyth.h  pvrclient-mythtv.cpp  pvrclient-mythtv.h  recordingRules.cpp  recordingRules.h  tools.h
addons/pvr.demo/: Makefile.am
addons/pvr.demo/addon/: LICENSE.txt  PVRDemoAddonSettings.xml  README.md  addon.xml  addon.xml.in
addons/pvr.demo/src/: PVRDemoData.cpp  PVRDemoData.h  client.cpp  client.h
addons/pvr.dvblink/: Makefile.am  pvr.dvblink
addons/pvr.dvblink/addon/: addon.xml.in  changelog.txt
addons/pvr.dvblink/src/: DVBLinkClient.cpp  DVBLinkClient.h  DialogDeleteTimer.cpp  DialogDeleteTimer.h  DialogRecordPref.cpp  DialogRecordPref.h  HttpPostClient.cpp  HttpPostClient.h  RecordingStreamer.cpp  RecordingStreamer.h  TimeShiftBuffer.cpp  TimeShiftBuffer.h  base64.cpp  base64.h  client.cpp  client.h
addons/pvr.dvbviewer/: Makefile.am
addons/pvr.dvbviewer/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.dvbviewer/src/: DvbData.cpp  DvbData.h  RecordingReader.cpp  RecordingReader.h  Socket.cpp  Socket.h  TimeshiftBuffer.cpp  TimeshiftBuffer.h  client.cpp  client.h  xmlParser.cpp  xmlParser.h
addons/pvr.filmon/: Makefile.am
addons/pvr.filmon/addon/: addon.xml.in  changelog.txt
addons/pvr.filmon/src/: FilmonAPI.cpp  FilmonAPI.h  PVRFilmonData.cpp  PVRFilmonData.h  client.cpp  client.h  md5.cpp  md5.h
addons/pvr.fortherecord.argus/: Makefile.am  builddeps.txt
addons/pvr.fortherecord.argus/addon/: addon.xml  changelog.txt
addons/pvr.fortherecord.argus/src/: KeepAliveThread.cpp  activerecording.cpp  channel.cpp  client.cpp  client.h  epg.cpp  fortherecordrpc.cpp  fortherecordrpc.h  guideprogram.cpp  os-dependent.h  pvrclient-fortherecord.cpp  pvrclient-fortherecord.h  recording.cpp  recordinggroup.cpp  recordingsummary.cpp  tools.cpp  tools.h  upcomingrecording.cpp  upcomingrecording.h  utils.cpp  utils.h
addons/pvr.hts/: Makefile.am
addons/pvr.hts/addon/: addon.xml.in  changelog.txt
addons/pvr.hts/src/: HTSPConnection.cpp  HTSPConnection.h  HTSPData.cpp  HTSPData.h  HTSPDemux.cpp  HTSPDemux.h  HTSPDemuxer.cpp  HTSPTypes.h  HTSPVFS.cpp  Tvheadend.cpp  Tvheadend.h  client.cpp  client.h
addons/pvr.iptvsimple/addon/: addon.xml.in  changelog.txt
addons/pvr.iptvsimple/src/: PVRIptvData.cpp  client.cpp  client.h
addons/pvr.mediaportal/: Makefile.am
addons/pvr.mediaportal.tvserver/: Makefile.am
addons/pvr.mediaportal.tvserver/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.mediaportal.tvserver/src/: Cards.cpp  Cards.h  DateTime.cpp  DateTime.h  FileUtils.h  GUIDialogRecordSettings.cpp  GUIDialogRecordSettings.h  GenreTable.cpp  Socket.cpp  Socket.h  channels.cpp  channels.h  client.cpp  client.h  epg.cpp  epg.h  os-dependent.h  pvrclient-mediaportal.cpp  pvrclient-mediaportal.h  recordings.cpp  recordings.h  timers.cpp  timers.h  uri.h  utils.cpp  utils.h
addons/pvr.mediaportal/addon/: addon.xml
addons/pvr.mediaportal/src/: pvrclient-mediaportal.cpp
addons/pvr.mythtv/: Makefile.am
addons/pvr.mythtv.cmyth/: Makefile.am
addons/pvr.mythtv.cmyth/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.mythtv.cmyth/src/: categories.cpp  categories.h  client.cpp  client.h  cppmyth.h  demux.cpp  demux.h  fileOps.cpp  fileOps.h  libcmyth.h  pvrclient-mythtv.cpp  pvrclient-mythtv.h  recordingRules.cpp  recordingRules.h  tools.h
addons/pvr.mythtv/addon/: addon.xml.in  changelog.txt
addons/pvr.mythtv/src/: addon.map  avinfo.cpp  avinfo.h  categories.cpp  categories.h  client.cpp  client.h  demux.cpp  demux.h  fileOps.cpp  fileOps.h  guidialogbase.cpp  pvrclient-mythtv.cpp  pvrclient-mythtv.h  tools.h
addons/pvr.nextpvr/: Makefile.am
addons/pvr.nextpvr/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.njoy/: Makefile.am
addons/pvr.pctv/: Makefile.am
addons/pvr.tvh/: Makefile.am
addons/pvr.vdr.vnsi/: Makefile.am
addons/pvr.vuplus/: Makefile.am
addons/pvr.wmc/: .gitignore  Makefile.am  windows readme.txt
lib/cmyth/: Makefile.am
lib/cppmyth/: .gitignore  CMakeLists.txt  Makefile.am  README  configure.ac
lib/jsoncpp/: Makefile.am  version.txt
lib/libdvblinkremote/: COPYING  Makefile.am  channel.cpp  curlhttpclient.cpp  curlhttpclient.h  dvblinkremote.cpp  dvblinkremote.h  dvblinkremotecommunication.cpp  dvblinkremoteconnection.h  dvblinkremotehttp.cpp  dvblinkremotehttp.h  dvblinkremoteserialization.h  epg.cpp  favorites.cpp  generic_response.cpp  generic_response.h  item_metadata.cpp  m3u_playlist.cpp  parental_lock.cpp  playback_container.cpp  playback_item.cpp  playback_object.cpp  program.cpp  recording.cpp  recording_settings.cpp  remove_playback_object_request.cpp  request.h  response.h  scheduling.cpp  scheduling.h  server_info.cpp  stop_stream_request.cpp  stream.cpp  stream_request.cpp  streaming_capabilities.cpp  transcoded_video_stream_request.cpp  transcoding_options.cpp  util.cpp  util.h  version.h  (+2 more)
lib/libhts/: Makefile.am  OSXGNUReplacements.h  htsbuf.c  htsmsg.c  htsmsg.h  htsq.h  htsstr.c
lib/tinyxml/: Makefile.am  XMLUtils.cpp  XMLUtils.h  readme.txt  tinyxml.cpp  tinyxml.h
(+1610 files in other folders)
