#
# Makefile for the DVBViewer add-on for XBMC PVR
#
# See the README for copyright information and
# how to reach the author.
#

ADDONBINNAME    = XBMC_dvbviewer
ADDONNAME       = pvr.dvbviewer
LIBNAME         = libdvbviewer-addon
lib_LTLIBRARIES = libdvbviewer-addon.la

include ../Makefile.include.am

libdvbviewer_addon_la_SOURCES = src/client.cpp \
                                src/DvbData.cpp \
                                src/xmlParser.cpp

